--- a/starter/emails/transactional.html
+++ b/starter/emails/transactional.html
@@ -6,9 +6,9 @@ bodyClass: bg-slate-50
   <div class="bg-blue-500 sm:px-4 font-inter">
     <table align="center" class="m-0 mx-auto text-[#111827]">
       <tr>
-        <td class="w-[552px] max-w-full xs:block hover:bg-red-200">
+        <td class="w-[552px] max-w-full xs:block">
           <x-spacer height="24px" />
-          <a href="" class="underline">link</a>
+          <a href="#" class="underline hover:text-red-200">link</a>
         </td>
       </tr>
     </table>
