--- a/starter/emails/transactional.html
+++ b/starter/emails/transactional.html
@@ -6,9 +6,10 @@ bodyClass: bg-slate-50
   <div class="bg-blue-500 sm:px-4 font-inter">
     <table align="center" class="m-0 mx-auto text-[#111827]">
       <tr>
-        <td class="w-[552px] max-w-full xs:block">
+        <td class="w-[552px] max-w-full xs:block sm:block text-center">
           <x-spacer height="24px" />
-          <a href="#" class="underline hover:text-red-200">link</a>
+          <a href="#" class="no-underline hover:text-red-500 text-2xl uppercase">link</a>
+          <x-spacer height="24px" />
         </td>
       </tr>
     </table>
